--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -415,7 +415,7 @@ body {
         .ui-label.label-field {
             -webkit-flex-shrink: 0;
             flex-shrink: 0;
-            width: 78px;
+            width: 27%;
             font-size: 12px;
             overflow: hidden;
             text-overflow: ellipsis;
