--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -1298,7 +1298,7 @@ a:visited {
 
         > li {
             @extend .fieldFont;
-            padding: 1px 8px 1px 9px;
+            padding: 0 8px 0 8px;
             line-height: 22px;
             white-space: nowrap;
             overflow: hidden;
