--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -798,7 +798,7 @@ a:visited {
     > ul {
         color: $text-secondary;
         background-color: $bcg-darkest;
-        outline: 1px solid $bcg-darkest;
+        // outline: 1px solid $bcg-darkest;
 
         > li {
             &:hover,
