--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -127,7 +127,7 @@ body {
 #ui-bottom {
     height: 24px;
     line-height: 24px;
-    background-color: #293538;
+    background-color: $bcg-darkest;
     // background-color: #111;
 
     > .content {
@@ -221,6 +221,7 @@ body {
 
 .ui-panel.assets {
     overflow: visible;
+    background-color: $bcg-darker;
 
     &.resizable {
         &.resizable-top.scrollable > .content {
@@ -405,8 +406,9 @@ body {
 }
 
 .asset-preview {
+    display: block;
     width: calc(100% - 16px);
-    padding-bottom: calc(100% - 16px);
+    // padding-bottom: calc(100% - 16px);
     border: 8px solid $bcg-darkest;
 
     background-position: center center;
@@ -469,8 +471,6 @@ body {
 }
 
 .ui-panel.attributes {
-    border-left: 1px solid black;
-
     &.foldable.horizontal > .ui-header:after {
         transform: rotate(90deg);
     }
@@ -928,8 +928,6 @@ body {
 }
 
 .ui-panel.hierarchy {
-    border-right: 1px solid $bcg-dark;
-
     &.foldable {
         &.horizontal.resizable-right {
             > .ui-header:after {
@@ -1071,7 +1069,6 @@ body {
         position: relative;
 
         &.type-animation {
-            // background-image: url("/editor/scene/img/asset-placeholder-animation.png");
             > .thumbnail.placeholder:after {
                 content: '\E274';
             }
@@ -1080,7 +1077,6 @@ body {
             }
         }
         &.type-audio {
-            // background-image: url("/editor/scene/img/asset-placeholder-audio.png");
             > .thumbnail.placeholder:after {
                 content: '\E262';
             }
@@ -1089,7 +1085,6 @@ body {
             }
         }
         &.type-cubemap {
-            // background-image: url("/editor/scene/img/asset-placeholder-cubemap.png");
             > .thumbnail.placeholder:after {
                 content: '\E515';
             }
@@ -1098,7 +1093,6 @@ body {
             }
         }
         &.type-json {
-            // background-image: url("/editor/scene/img/asset-placeholder-json.png");
             > .thumbnail.placeholder:after {
                 content: '\E353';
             }
@@ -1107,7 +1101,6 @@ body {
             }
         }
         &.type-material {
-            // background-image: url("/editor/scene/img/asset-placeholder-material.png");
             > .thumbnail.placeholder:after {
                 content: '\E547';
             }
@@ -1116,7 +1109,6 @@ body {
             }
         }
         &.type-model {
-            // background-image: url("/editor/scene/img/asset-placeholder-model.png");
             > .thumbnail.placeholder:after {
                 content: '\E417';
             }
@@ -1125,7 +1117,6 @@ body {
             }
         }
         &.type-scene {
-            // background-image: url("/editor/scene/img/asset-placeholder-scene.png");
             > .thumbnail.placeholder:after {
                 content: '\E417';
             }
@@ -1134,7 +1125,6 @@ body {
             }
         }
         &.type-texture {
-            // background-image: url("/editor/scene/img/asset-placeholder-texture.png");
             > .thumbnail.placeholder:after {
                 content: '\E236';
             }
@@ -1143,7 +1133,6 @@ body {
             }
         }
         &.type-text {
-            // background-image: url("/editor/scene/img/asset-placeholder-text.png");
             > .thumbnail.placeholder:after {
                 content: '\E284';
             }
@@ -1158,7 +1147,7 @@ body {
                 color: $text-primary;
             }
             > .label {
-                background-color: #2c393c;
+                background-color: $bcg-darkest;
             }
         }
         &.selected {
@@ -1166,7 +1155,7 @@ body {
                 color: $text-primary;
             }
             > .label {
-                background-color: #20292b;
+                background-color: $bcg-darkest;
             }
         }
         > .thumbnail {
@@ -1222,7 +1211,7 @@ body {
             text-overflow: ellipsis;
             text-align: center;
             overflow: hidden;
-            background-color: rgba(#364346, 0.8);
+            background-color: rgba($bcg-darker, 0.8);
         }
     }
 }
