Added autocomplete for scripts

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -1314,6 +1314,37 @@ a:visited {
     }
 }
 
+.ui-autocomplete {
+    position: absolute;
+    top: 100%;
+    left: -1px;
+    right: -1px;
+    z-index: 1;
+    background-color: #666;
+    font-size: 12px;
+    max-height: 220px;
+    overflow: hidden;
+    overflow-y: auto;
+
+    > ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        > li {
+            height: 22px;
+            line-height: 22px;
+            padding: 0px 8px;
+            border: 1px solid #333;
+
+            &.selected {
+                cursor: pointer;
+                background-color: #333;
+            }
+        }
+    }
+}
+
 .ui-code {
     @extend .fieldFont;
     display: block;
