--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -899,6 +899,20 @@ a:visited {
     background-color: $bcg-darkest;
 }
 
+.ui-autocomplete {
+    background-color: $bcg-dark;
+
+    > ul {
+        > li {
+            border-color: $bcg-darker;
+
+            &.selected {
+                background-color: $bcg-darkest;
+            }
+        }
+    }
+}
+
 
 .ui-progress {
     background-color: $bcg-darkest;
