--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -505,6 +505,18 @@ body {
             vertical-align: top;
         }
         &.field-asset {
+            &.channel {
+                > .content > .top {
+                    > .ui-label {
+                        float: left;
+                        width: calc(100% - 100px);
+                    }
+                    > .ui-select-field {
+                        float: right;
+                        width: 32px;
+                    }
+                }
+            }
             > .content {
                 > .ui-image-field {
                     -webkit-flex-shrink: 0;
@@ -571,11 +583,13 @@ body {
                         }
                     }
                     > .ui-label {
-                        width: calc(100% - 24px);
+                        width: calc(100% - 44px);
                         height: 22px;
                         line-height: 22px;
                         margin: 3px;
-                        padding: 0 8px;
+                        padding: 0 28px 0 8px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                         background-color: $bcg-dark;
                         border: 1px solid $bcg-darker;
                         cursor: pointer;
