prevent nasty text-select from pickers

--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -346,6 +346,8 @@ a:visited {
         }
     }
     > .overlay {
+        @extend .noSelect;
+
         position: absolute;
         width: auto;
         height: auto;
